# goit_web_hw_10

./: README.md  compose.yaml  example.env  pyproject.toml  requirements.txt
quotes/quotes/: settings.py  urls.py
quotes/quotesapp/: admin.py  filler.py  forms.py  models.py  urls.py  views.py
quotes/quotesapp/migrations/: 0001_initial.py  0002_remove_quote_author_quote_author.py  0003_alter_quote_text_alter_tag_name.py  0004_alter_quote_text.py  0005_alter_quote_text.py
quotes/quotesapp/static/quotesapp/: style.css
quotes/quotesapp/templates/quotesapp/: author.html  author_quotes.html  base.html  index.html  quote.html  quotes_by_tag.html  tag.html
quotes/users/: forms.py  urls.py  views.py
quotes/users/templates/users/: password_reset_complete.html
